--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mongoose": "^5.0.6",
     "mongoose-unique-validator": "^2.0.0",
     "ng4-loading-spinner": "^1.1.1",
+    "primeng": "^5.2.3",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "rxjs": "^5.5.6",
