--- a/package.json
+++ b/package.json
@@ -29,20 +29,24 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@google-cloud/storage": "^1.6.0",
     "agm-direction": "^0.3.7",
     "angular2-datatable": "^0.6.0",
     "angular2-loaders-css": "^2.0.1",
+    "angularfire2": "^5.0.0-rc.6",
     "async": "^2.6.0",
     "axios": "^0.17.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
+    "firebase": "^4.12.0",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.1.1",
     "mailgun-js": "^0.16.0",
     "mongoose": "^5.0.6",
     "mongoose-unique-validator": "^2.0.0",
+    "multer": "^1.3.0",
     "ng4-loading-spinner": "^1.1.1",
     "primeng": "^5.2.3",
     "request": "^2.83.0",
