--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jsonwebtoken": "^8.1.1",
     "mailgun-js": "^0.16.0",
     "mongoose": "^5.0.6",
+    "mongoose-type-url": "^1.0.2",
     "mongoose-unique-validator": "^2.0.0",
     "multer": "^1.3.0",
     "ng4-loading-spinner": "^1.1.1",
