--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mongoose-unique-validator": "^2.0.0",
     "multer": "^1.3.0",
     "ng4-loading-spinner": "^1.1.1",
+    "ngx-pagination": "^3.1.0",
     "primeng": "^5.2.3",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
