--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "^4.16.3",
     "firebase": "^4.12.0",
     "hammerjs": "^2.0.8",
+    "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.1.1",
     "mailgun-js": "^0.16.0",
     "mongoose": "^5.0.6",
