--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^5.2.0",
     "@google-cloud/storage": "^1.6.0",
     "agm-direction": "^0.3.7",
+    "angular2-csv": "^0.2.5",
     "angular2-datatable": "^0.6.0",
     "angular2-loaders-css": "^2.0.1",
     "angularfire2": "^5.0.0-rc.6",
